force-app/main/default/objects/Dummy__c/fields/dumm1243__c.field-meta.xml
<CustomField>
    <fullName>dumm1243__c</fullName>
    <label>dumm1243</label>
    <type>Address</type>
</CustomField>