force-app/main/default/objects/Dummy__c/fields/dumm1__c.field-meta.xml
<CustomField>
    <fullName>dumm1__c</fullName>
    <label>dumm1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>