force-app/main/default/objects/Dummy__c/fields/dummy10__c.field-meta.xml
<CustomField>
    <fullName>dummy10__c</fullName>
    <label>dummy10</label>
    <type>Time</type>
</CustomField>