force-app/main/default/objects/Dummy__c/fields/dummy11__c.field-meta.xml
<CustomField>
    <fullName>dummy11__c</fullName>
    <label>dummy11</label>
    <type>Address</type>
</CustomField>