force-app/main/default/objects/Dummy__c/fields/dummy12__c.field-meta.xml
<CustomField>
    <fullName>dummy12__c</fullName>
    <label>dummy12</label>
    <type>DateTime</type>
</CustomField>