force-app/main/default/objects/Dummy__c/fields/dummyMulti__c.field-meta.xml
<CustomField>
    <fullName>dummyMulti__c</fullName>
    <label>dummyMulti</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>