force-app/main/default/objects/Dummy__c/fields/gh__c.field-meta.xml
<CustomField>
    <fullName>gh__c</fullName>
    <label>gh</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>