force-app/main/default/objects/Dummy__c/fields/Hello_World__c.field-meta.xml
<CustomField>
    <fullName>Hello_World__c</fullName>
    <label>Hello World</label>
    <length>255</length>
    <type>Text</type>
</CustomField>