force-app/main/default/objects/Dummy__c/fields/hg__c.field-meta.xml
<CustomField>
    <fullName>hg__c</fullName>
    <label>hg</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>