force-app/main/default/objects/Dummy__c/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <label>temp</label>
    <type>Email</type>
</CustomField>