force-app/main/default/objects/Dummy__c/fields/X11233__c.field-meta.xml
<CustomField>
    <fullName>X11233__c</fullName>
    <label>11233</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>